src/test/deca/context/invalid/ContextAvecObjet/DeclClass/doubleDefClassWithExtends.deca
// Description:
//    Double définition d'une classe
//
// Resultats:
//    Erreur contextuelle ligne A
//    Une telle classe est déjà définie

class A {}
class B {}
class A extends B{}